# OpenGL

./: CMakeLists.txt  VAR.cmake
01_basic/: CMakeLists.txt
01_basic/01_create_window/: CMakeLists.txt  main.cxx  runner.cxx  runner.h
01_basic/02_render_triangle/: CMakeLists.txt  main.cxx  runner.cxx  runner.h
01_basic/03_shaders/: CMakeLists.txt  main.cxx  runner.cxx  runner.h
01_basic/04_textures/: CMakeLists.txt  runner.cxx  runner.h
01_basic/05_transformations/: CMakeLists.txt  main.cxx  runner.cxx  runner.h
01_basic/06_camera/: CMakeLists.txt  main.cxx  runner.cxx
01_create_window/: runner.cxx  runner.h
02_lighting/: CMakeLists.txt
02_lighting/07_colors/: runner.cxx  runner.h
02_lighting/08_basic_lighting/: CMakeLists.txt  runner.cxx
02_lighting/09_materials/: CMakeLists.txt  (+1 more)
02_render_triangle/: CMakeLists.txt  main.cxx  runner.cxx  runner.h
03_shaders/: CMakeLists.txt  main.cxx  runner.cxx
03_ui/: CMakeLists.txt
04_textures/: CMakeLists.txt  main.cxx  runner.cxx
05_adv_opengl/: CMakeLists.txt
05_adv_opengl/16_depth_testing/: CMakeLists.txt  main.cxx  runner.cxx  runner.h
05_transformations/: CMakeLists.txt  main.cxx  runner.cxx
06_camera/: CMakeLists.txt  runner.cxx  runner.h
07_colors/: CMakeLists.txt  main.cxx  runner.cxx  runner.h
08_basic_lighting/: main.cxx  runner.cxx
09_materials/: main.cxx  runner.cxx
10_lighting_maps/: main.cxx  runner.cxx  runner.h
11_light_casters/: main.cxx  runner.cxx  runner.h
assets/: CMakeLists.txt  assets_inc.h
assets/shader/: e_shader_asset_type.h  e_shader_type.h  shader_assets.cxx  shader_assets.h
assets/shader/3d/: main.frag  main.vert
assets/shader/alpha cutout/: main.frag  main.vert
assets/shader/ambient lighting/: main.frag
assets/shader/blinn-phong specular lighting/: main.frag  main.vert
assets/shader/constant color/: main.frag  main.vert
assets/shader/constant light/: main.frag
assets/shader/depth visualizing/: main.frag  main.vert
assets/shader/diffuse lighting/: main.frag  main.vert
assets/shader/directional light/: main.frag
assets/shader/goraud lighting/: main.frag  main.vert
assets/shader/inc/: light.glsl  material.glsl
assets/shader/multiple lights/: main.frag  main.vert
assets/shader/point light/: main.frag
assets/shader/post processing/grayscale/: main.frag
assets/shader/post processing/inversion/: main.frag
assets/shader/post processing/kernel/: sharpen.frag
assets/shader/screen buffer/: main.frag  main.vert
assets/shader/single color/: main.frag
assets/shader/spot light/: main.frag  main.vert
assets/shader/texture blending/: main.frag
assets/shader/texture mapping/: frag.glsl  main.frag  main.vert  vert.glsl
assets/shader/texture mapping lighting/: main.frag  main.vert
assets/shader/trs/: main.frag  main.vert
assets/shader/uniform/: main.frag  main.vert
assets/shader/vertex color/: main.frag  main.vert
assets/texture/: texture_assets.cxx  texture_assets.h
shared/: CMakeLists.txt  fstream_guard.h
(+48 files in other folders)
